...
    "DINING_ROOM" to Icons.Outlined.BrunchDining,
    "ENTRY" to Icons.Outlined.DoorSliding,
    "MASTER_BEDROOM" to Icons.Outlined.KingBed,
    "EXERCISE_ROOM" to Icons.Outlined.FitnessCenter,
    "PLAY_ROOM" to Icons.Outlined.Games,
    "BEDROOM" to Icons.Outlined.SingleBed,
    "ROOM" to Icons.Outlined.Room,
    "MENU_ALT" to Icons.Outlined.MoreHoriz,
    "PLUS" to Icons.Outlined.Add,
    "MINUS" to Icons.Outlined.Remove,
    "NUMBER_PAD" to Icons.Outlined.Dialpad,
    "KEYBOARD" to Icons.Outlined.Keyboard,
)
...
